# monopoly

./: README.md  dune-project  monopoly.opam
src/: ai.ml  ai.mli  card.ml  card.mli  dune  game.ml  game.mli  gameboard.ml  main.ml  player.ml  player.mli  print.ml  print.mli  property.ml  property.mli  real.ml  real.mli
tests/: dune  tests.ml
